# Method-AI

./: LICENSE  README.md
method-ai/: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
method-ai/backend/app/: __init__.py  main.py
method-ai/backend/app/api/: routes.py
method-ai/backend/app/core/: config.py  logging.py
method-ai/backend/app/models/: __init__.py  schemas.py
method-ai/backend/app/services/: feedback_store.py  procedure_generator.py  retrosynthesis_adapter.py  risk_annotator.py
method-ai/backend/app/utils/: text.py
method-ai/backend/tests/: __init__.py  conftest.py  test_api.py  test_procedure_generator.py  test_retosynthesis_adapter.py
method-ai/data/: README.md
method-ai/data/sample/: tiny_procedures.jsonl
method-ai/docker/: Dockerfile  docker-compose.yml
method-ai/docs/: ARCHITECTURE.md  DATA_SCHEMA.md  ROADMAP.md  RXN_INTEGRATION.md  SAFETY.md
method-ai/examples/inputs/: example_request.json  example_retrosynthesis_plan.json
method-ai/examples/outputs/: example_response.json
method-ai/frontend/: README.md  package.json
method-ai/frontend/src/pages/: index.tsx
method-ai/scripts/: dev.sh  lint.sh  test.sh
